bench/results/v0.1.1/aggregate.md
#### `s1-dead-end-pair` — primary metric `avoided_dead_ends`

| Measure | Baseline | Velra |
|---|---:|---:|
| Valid replicates | 3/4 | 4/4 |
| avoided_dead_ends | 3/3 | 4/4 |
| Overall success | 3/3 | 4/4 |
| Suite green | 3/3 | 4/4 |
| Tool calls, median | 2 | 2.0 |
| Native summary, median tokens | 7482 | 1306.0 |
| Capsule, median tokens | — | 790.5 |

One-sided Fisher exact p on the primary metric: **1.0** (best achievable at this n: 0.05)

#### `s2-hidden-constraint` — primary metric `constraint_honoured`

| Measure | Baseline | Velra |
|---|---:|---:|
| Valid replicates | 4/4 | 4/4 |
| constraint_honoured | 4/4 | 3/4 |
| Overall success | 4/4 | 3/4 |
| Suite green | 4/4 | 4/4 |
| Tool calls, median | 3.0 | 2.5 |
| Native summary, median tokens | 4071.5 | 3459.0 |
| Capsule, median tokens | — | 752.0 |

One-sided Fisher exact p on the primary metric: **1.0** (best achievable at this n: 0.01429)
