bench/results/v0.1.2/aggregate.md
#### `s1-dead-end-pair` — primary metric `avoided_dead_ends`

| Measure | Baseline | Velra |
|---|---:|---:|
| Valid replicates | 4/4 | 4/4 |
| avoided_dead_ends | 4/4 | 4/4 |
| Overall success | 4/4 | 4/4 |
| Suite green | 4/4 | 4/4 |
| Tool calls, median | 4.5 | 4.0 |
| Native summary, median tokens | None | None |
| Capsule, median tokens | — | None |

One-sided Fisher exact p on the primary metric: **1.0** (best achievable at this n: 0.01429)

#### `s2-hidden-constraint` — primary metric `constraint_honoured`

| Measure | Baseline | Velra |
|---|---:|---:|
| Valid replicates | 4/4 | 4/4 |
| constraint_honoured | 4/4 | 4/4 |
| Overall success | 4/4 | 4/4 |
| Suite green | 4/4 | 4/4 |
| Tool calls, median | 2.0 | 2.5 |
| Native summary, median tokens | None | None |
| Capsule, median tokens | — | None |

One-sided Fisher exact p on the primary metric: **1.0** (best achievable at this n: 0.01429)

#### `s3-working-set` — primary metric `resolved_the_reference`

| Measure | Baseline | Velra |
|---|---:|---:|
| Valid replicates | 2/4 | 2/4 |
| resolved_the_reference | 2/2 | 2/2 |
| Overall success | 2/2 | 2/2 |
| Suite green | 2/2 | 2/2 |
| Tool calls, median | 2.5 | 3.5 |
| Native summary, median tokens | None | None |
| Capsule, median tokens | — | None |

One-sided Fisher exact p on the primary metric: **1.0** (best achievable at this n: 0.16667)
